ingress/ingress-nginx/fruit/ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana
                port:
                  number: 5678
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apple
                port:
                  number: 5678
