ingress/ingress-nginx/fruit/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: test.osckorea.info
    http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple
              port:
                number: 5678
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana
              port:
                number: 5678
  tls:
  - hosts:
    - test.osckorea.info
    secretName: tls-sample-ingress
